# react-native-vlc-media-player

./: OAT.xml  README.OpenSource  README.md  RNVLCNativeComponent.ts  VLCPlayer.js  index.js  package.json
harmony/rn_vlc/: BuildProfile.ets  Index.ets  build-profile.json5  hvigorfile.ts  oh-package.json5
harmony/rn_vlc/src/main/: module.json5
harmony/rn_vlc/src/main/cpp/: CMakeLists.txt  RNVlcMediaPlayerPackage.h
harmony/rn_vlc/src/main/ets/: RNVLC.ets
harmony/rn_vlc/src/ohosTest/: module.json5
